format index.html page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
 
-  <div class='welcome'><h1>WELCOME TO</h1></div>
+  <div class='welcome'>
+    <h1>WELCOME TO</h1>
+  </div>
 
   <div class="row">
     <div class="col-md-12 home-logo">
@@ -11,17 +13,18 @@
   <div class="row">
     <div class="col-md-12 welcome-message">
       <h2> About Us </h2>
-
-      <p>Flrish is a marketplace for people who are passionate 
-      about making games, and playing games. It is a place where 
-      up and coming developers can get thier foot in the door and 
-      sell their games to a dedicated audience. All you need to do to 
-      start buying and selling is to sign up. Once logged in, you can 
-      upload a game, or browse the marketplace. All payments on flrish 
-      are handled through Stripe, but fear not! All you need is a flrish 
-      account and you're good to go! Currently, there are several 
-      features in the works to make your experience here on flrish, 
-      even better! Stay tuned, and game on.</p>
+      <p>
+        Flrish is a marketplace for people who are passionate 
+        about making games, and playing games. It is a place where 
+        up and coming developers can get thier foot in the door and 
+        sell their games to a dedicated audience. All you need to do to 
+        start buying and selling is to sign up. Once logged in, you can 
+        upload a game, or browse the marketplace. All payments on flrish 
+        are handled through Stripe, but fear not! All you need is a flrish 
+        account and you're good to go! Currently, there are several 
+        features in the works to make your experience here on flrish, 
+        even better! Stay tuned, and game on.
+      </p>
     </div>
   </div>
 
@@ -30,7 +33,7 @@
       <%= link_to "Go To Marketplace", games_path, class: "btn btn-secondary btn-lg btn-block browse-button" %>
     </div>
   </div>
-  
-  <br><br>
+  <br>
+  <br>
 
 </div>
