--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     <% if user_signed_in? %>
       <li class="nav_out"><%= link_to('Logout', destroy_user_session_path) %></li>
     <% else %>
-      <li class="nav_up"><%= link_to('Sign Up', new_user_registration_path) %></li>
+      <li class="nav_up"><%= link_to('Register', new_user_registration_path) %></li>
       <li class="nav_in"><%= link_to('Login', new_user_session_path)  %></li>
     <% end %>
   </ul>
