--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -362,6 +362,76 @@
   color: #d11f66;
 }
 
+/* Register */
+
+.register {
+  text-align: center;
+  font-size: 3.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.register-info {
+  padding: 1rem 25rem;
+  text-align: center;
+  font-size: 1rem;
+}
+
+.devise-form {
+  padding: 0.5rem 25rem;
+}
+
+.login-link {
+  padding-left: 25rem;
+}
+
+.login-link a {
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
+.login-link a:hover {
+  color: #d11f66;
+}
+
+.field {
+  color: #d11f66;
+}
+
+@media screen and (max-width: 1200px) {
+  .register-info {
+    padding: 1rem 15rem;
+  }
+
+  .devise-form {
+    padding: 0.5rem 15rem;
+  }
+
+  .login-link {
+    padding: 0rem 15rem;
+  }
+}
+
+
+@media screen and (max-width: 800px) {
+  .register {
+    font-size: 2.5rem;
+    padding-bottom: 0.7rem;
+  }
+
+  .register-info {
+    padding: 0rem 5rem;
+    font-size: 0.95rem;
+  }
+
+  .devise-form {
+    padding: 0.5rem 5rem;
+  }
+
+  .login-link {
+    padding: 0rem 5rem;
+  }
+}
+
 /* BODY */
 
 body {
