--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -366,22 +366,23 @@
 
 .register {
   text-align: center;
+  // font-family: 'Oleo Script', serif;
   font-size: 3.5rem;
-  padding-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .register-info {
-  padding: 1rem 25rem;
+  margin: 1rem 25rem;
   text-align: center;
   font-size: 1rem;
 }
 
 .devise-form {
-  padding: 0.5rem 25rem;
+  margin: 0.5rem 25rem;
 }
 
 .login-link {
-  padding-left: 25rem;
+  margin-left: 25rem;
 }
 
 .login-link a {
@@ -399,15 +400,15 @@
 
 @media screen and (max-width: 1200px) {
   .register-info {
-    padding: 1rem 15rem;
+    margin: 1rem 15rem;
   }
 
   .devise-form {
-    padding: 0.5rem 15rem;
+    margin: 0.5rem 15rem;
   }
 
   .login-link {
-    padding: 0rem 15rem;
+    margin: 0rem 15rem;
   }
 }
 
@@ -415,20 +416,20 @@
 @media screen and (max-width: 800px) {
   .register {
     font-size: 2.5rem;
-    padding-bottom: 0.7rem;
+    margin-bottom: 0.7rem;
   }
 
   .register-info {
-    padding: 0rem 5rem;
+    margin: 0rem 5rem;
     font-size: 0.95rem;
   }
 
   .devise-form {
-    padding: 0.5rem 5rem;
+    margin: 0.5rem 5rem;
   }
 
   .login-link {
-    padding: 0rem 5rem;
+    margin: 0rem 5rem;
   }
 }
 
