--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="all_views">  
-  <h2 class="register"> Registration </h2>
-  <p class="register-info">
+  <h2 class="form"> Registration </h2>
+  <p class="form-info">
     Register with <i>flrish</i> today and start buying and selling great games! All you need is a valid email address and a password, all purchases are done through <i>Stripe</i> so there's no need to enter your payment details with us.
   </p>
   <div class="devise-form form-group">
@@ -8,7 +8,7 @@
       <%= devise_error_messages! %>
         <div class="field">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter an email address", class: "form-control" %>
         </div>
         <br/>
         <div class="field">
@@ -16,20 +16,20 @@
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+          <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
         </div>
         <br/>
         <div class="field">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm password", class: "form-control" %>
         </div>
         <br/>
         <div class="actions">
-          <%= f.submit "Sign up", class: "btn btn-secondary btn-lg btn-block browse-button" %>
+          <%= f.submit "Sign up", class: "btn btn-secondary btn-lg btn-block big-button" %>
         </div>
     <% end %>
   </div>
-  <div class="login-link">
+  <div class="form-link">
     <%= render "devise/shared/links" %>
   </div>
 </div>
