--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,7 +30,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <%= link_to "Go To Marketplace", games_path, class: "btn btn-secondary btn-lg btn-block browse-button" %>
+      <%= link_to "Go To Marketplace", games_path, class: "btn btn-secondary btn-lg btn-block big-button" %>
     </div>
   </div>
   <br>
