--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="all_views">  
+<div class="all-views">  
   <h2 class="form"> Registration </h2>
   <p class="form-info">
     Register with <i>flrish</i> today and start buying and selling great games! All you need is a valid email address and a password, all purchases are done through <i>Stripe</i> so there's no need to enter your payment details with us.
