--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="all_views">
+<div class="all-views">
   <%= form_with(model: game, local: true) do |form| %>
     <% if game.errors.any? %>
       <div id="error_explanation">
