change marketplace font to nunito sans

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -208,7 +208,7 @@
 }
 
 .games-index-title h1 {
-  font-family: 'Oleo Script', 'sans-serif';
+  // font-family: 'Oleo Script', 'sans-serif';
   font-size: 85px;
   text-align: center;
   padding-bottom: 2%;
