change class names for devise form to flrish-form, add boilerplate bootstrap/css for new game form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <p class="form-info">
     Register with <i>flrish</i> today and start buying and selling great games! All you need is a valid email address and a password, all purchases are done through <i>Stripe</i> so there's no need to enter your payment details with us.
   </p>
-  <div class="devise-form form-group">
+  <div class="flrish-form form-group">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
         <div class="field">
