--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,42 +1,44 @@
 <div class="all-views">
-  <%= form_with(model: game, local: true) do |form| %>
-    <% if game.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(game.errors.count, "error") %> prohibited this game from being saved:</h2>
+  <div class="form-group flrish-form">
+    <%= form_with(model: game, local: true) do |form| %>
+      <% if game.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(game.errors.count, "error") %> prohibited this game from being saved:</h2>
 
-        <ul>
-        <% game.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
+          <ul>
+          <% game.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+    
+      <div class="field">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: "from-input" %>
       </div>
+
+      <div class="field">
+        <%= form.label :description %>
+        <%= form.text_field :description, class: "from-input" %>
+      </div>
+
+      <div class="field">
+        <%= form.label :price %>
+        <%= form.text_field :price, class: "from-input" %>
+      </div>
+
+      <div class="field">
+        <%= form.label :cover %><br>
+        <%= form.file_field :cover, class: "from-input" %>
+      </div>
+
+      <div class="actions">
+        <%= form.submit "Add game", class: "btn btn-secondary btn-lg btn-block big-button" %>
+      </div>
+
+      <%= render 'shared/errors', object: game %>
+
     <% end %>
-  
-    <div class="field">
-      <%= form.label :title %>
-      <%= form.text_field :title %>
-    </div>
-
-    <div class="field">
-      <%= form.label :description %>
-      <%= form.text_field :description %>
-    </div>
-
-    <div class="field">
-      <%= form.label :price %>
-      <%= form.text_field :price %>
-    </div>
-
-    <div class="field">
-      <%= form.label :cover %><br>
-      <%= form.file_field :cover %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit %>
-    </div>
-
-    <%= render 'shared/errors', object: game %>
-
-  <% end %>
+  </div>
 </div>
