--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -377,7 +377,7 @@
   font-size: 1rem;
 }
 
-.devise-form {
+.flrish-form {
   margin: 0.5rem 25rem;
 }
 
@@ -403,7 +403,7 @@
     margin: 1rem 15rem;
   }
 
-  .devise-form {
+  .flrish-form {
     margin: 0.5rem 15rem;
   }
 
@@ -424,7 +424,7 @@
     font-size: 0.95rem;
   }
 
-  .devise-form {
+  .flrish-form {
     margin: 0.5rem 5rem;
   }
 
