--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,12 @@
 <div class="all-views">  
-  <h1>New Game</h1>
+  <h1 class="form">Upload A New Game</h1>
+  <p class="form-info">
+    Here is where you can upload a new game to sell. Fill in the details below and your game will be added to the marketplace for people to purchase!
+  </p>
 
   <%= render 'form', game: @game %>
 
-  <%= link_to 'Back', games_path %>
+  <div class="form-link">
+    <%= link_to 'Back', games_path %>
+  </div>
 </div>  
