--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,5 @@
 <div class="all-views">  
-  <h1 class="form">Upload A New Game</h1>
+  <h1 class="form">New Game</h1>
   <p class="form-info">
     Here is where you can upload a new game to sell. Fill in the details below and your game will be added to the marketplace for people to purchase!
   </p>
