--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -20,7 +20,7 @@
       <br/>
       <div class="field">
         <%= form.label :description %>
-        <%= form.text_area :description, :size => 500, placeholder: "Description", class: "form-control", rows: "4" %>
+        <%= form.text_area :description, placeholder: "Description", class: "form-control", rows: "4" %>
       </div>
       <br/>
       <div class="field">
