--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,3 +1,13 @@
-<h2>Thanks for your purchase!</h2>
+<div class="login">
+  <h2 class="form">Purchace complete!</h2>
 
-<%= link_to 'Back', games_path %>
+  <div class="flrish-form">
+   <p>
+    Thanks for your purchace, we hope you enjoy your new game! Please check your email to find a copy of your receipt as well as the download code for your game. Thanks for shopping with <i>flrish</i>, we hope to see you again soon :)
+   </p>
+  </div>
+
+  <div class="form-link">
+    <%= link_to 'Back', games_path %>
+  </div>
+</div>
