--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,7 @@
   font-size: 350%;
 }
 
-.nav_out, .nav_up, .nav_in {
+.nav_item {
   margin-left: 3%;
 }
 
@@ -101,12 +101,12 @@
 .welcome h1 {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
-  font-size: 5rem;
+  font-size: 3.7rem;
 }
 
 @media screen and (max-width: 770px) {
   .welcome h1 {
-    font-size: 4rem;
+    font-size: 3.3rem;
   }
 }
 
@@ -123,14 +123,14 @@
 }
 
 .home-logo img {
-  width: 450px;
-  height: 450px;
+  width: 350px;
+  height: 350px;
 }
 
 @media screen and (max-width: 500px) {
   .home-logo img {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -140,6 +140,7 @@
   justify-content: center;
   align-items: center;
   padding: 25px;
+  text-align: center;
 }
 
 .big-button {
