change form heading font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -365,7 +365,8 @@
 
 .form {
   text-align: center;
-  // font-family: 'Oleo Script', serif;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 800;  
   font-size: 3.5rem;
   margin-bottom: 1.5rem;
 }
@@ -378,6 +379,7 @@
 
 .flrish-form {
   margin: 0.5rem 25rem;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 .form-link {
