fix index heading

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,6 +164,14 @@
 
 /* GAMES INDEX */
 
+.store-head {
+  text-align: center;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 800;  
+  font-size: 5.5rem;
+  padding-bottom: 5%;
+}
+
 .index-row {
   display: flex;
   justify-content: center;
@@ -206,16 +214,9 @@
   text-align: center;
 }
 
-.games-index-title h1 {
-  // font-family: 'Oleo Script', 'sans-serif';
-  font-size: 75px;
-  text-align: center;
-  padding-bottom: 2%;
-}
-
 @media screen and (max-width: 600px) {
-  .games-index-title h1 {
-    font-size: 65px;
+  .store-head {
+    font-size: 3.7rem;
   }
 }
 
