--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class='row index-row'>
   <div class='col-md-6 games-index-title'>
-    <h1>Marketplace</h1>
+    <h1 class="store-head">Marketplace</h1>
   </div>
 </div>
 
