fix error in charges

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -3,7 +3,7 @@
 
   <div class="flrish-form">
    <p>
-    Thanks for your purchace, we hope you enjoy your new game! Please check your email to find a copy of your receipt as well as the download code for your game. Thanks for shopping with <i>flrish</i>, we hope to see you again soon :)
+    Thanks for your purchase, we hope you enjoy your new game! Please check your email to find a copy of your receipt as well as the download code for your game. Thanks for shopping with <i>flrish</i>, we hope to see you again soon :)
    </p>
   </div>
 
